@@ -8,8 +8,7 @@ import io.polyapi.commons.api.http.Request;
 import io.polyapi.commons.api.http.Response;
 import io.polyapi.commons.api.json.JsonParser;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.io.IOUtils;
-
+import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.reflect.Type;
@@ -24,7 +23,7 @@ import static java.nio.charset.Charset.defaultCharset;
 import static java.util.function.Predicate.not;
 
 /**
- * Parent implementation class for all services that connec to the PolyAPI service.
+ * Parent implementation class for all services that connect to the PolyAPI service.
  */
 @Slf4j
 public class PolyApiService {
@@ -44,7 +43,10 @@ public class PolyApiService {
         return get(relativePath, new HashMap<>(), new HashMap<>(), expectedResponseType);
     }
 
-    public <O> O get(String relativePath, Map<String, List<String>> headers, Map<String, List<String>> queryParams, Type expectedResponseType) {
+    public <O> O get(String relativePath,
+                     Map<String, List<String>> headers,
+                     Map<String, List<String>> queryParams,
+                     Type expectedResponseType) {
         return parsedCall(GET, relativePath, headers, queryParams, null, expectedResponseType);
     }
 
@@ -52,7 +54,11 @@ public class PolyApiService {
         return post(relativePath, new HashMap<>(), new HashMap<>(), body, expectedResponseType);
     }
 
-    public <I, O> O post(String relativePath, Map<String, List<String>> headers, Map<String, List<String>> queryParams, I body, Type expectedResponseType) {
+    public <I, O> O post(String relativePath,
+                         Map<String, List<String>> headers,
+                         Map<String, List<String>> queryParams,
+                         I body,
+                         Type expectedResponseType) {
         return parsedCall(POST, relativePath, headers, queryParams, body, expectedResponseType);
     }
 
@@ -60,7 +66,10 @@ public class PolyApiService {
         parsedCall(PATCH, relativePath, new HashMap<>(), new HashMap<>(), body, Void.TYPE);
     }
 
-    public <I> void patch(String relativePath, Map<String, List<String>> headers, Map<String, List<String>> queryParams, I body) {
+    public <I> void patch(String relativePath,
+                          Map<String, List<String>> headers,
+                          Map<String, List<String>> queryParams,
+                          I body) {
         parsedCall(PATCH, relativePath, headers, queryParams, body, Void.TYPE);
     }
 
@@ -68,62 +77,124 @@ public class PolyApiService {
         delete(relativePath, new HashMap<>(), new HashMap<>(), null);
     }
 
-
-    public <I> void delete(String relativePath, Map<String, List<String>> headers, Map<String, List<String>> queryParams, I body) {
+    public <I> void delete(String relativePath,
+                           Map<String, List<String>> headers,
+                           Map<String, List<String>> queryParams,
+                           I body) {
         parsedCall(DELETE, relativePath, headers, queryParams, body, Void.TYPE);
     }
 
-    private <I, O> O parsedCall(HttpMethod method, String relativePath, Map<String, List<String>> headers, Map<String, List<String>> queryParams, I body, Type expectedResponseType) {
+    private <I, O> O parsedCall(HttpMethod method,
+                                String relativePath,
+                                Map<String, List<String>> headers,
+                                Map<String, List<String>> queryParams,
+                                I body,
+                                Type expectedResponseType) {
+
         Map<String, List<String>> allHeaders = new HashMap<>();
-        //allHeaders.put("Accept", List.of("application/json"));
         allHeaders.put("Content-type", List.of("application/json"));
         headers.forEach((key, value) -> allHeaders.put(key, value.stream().toList()));
 
-        Response response = callApi(method, relativePath, allHeaders, queryParams, jsonParser.toJsonInputStream(body));
+        Response response = callApi(
+                method,
+                relativePath,
+                allHeaders,
+                queryParams,
+                jsonParser.toJsonInputStream(body)
+        );
+
         log.debug("Response is successful. Status code is {}.", response.statusCode());
         log.debug("Parsing response.");
-        O result = Optional.of(expectedResponseType)
-                .filter(not(Void.TYPE::equals))
-                .map(type ->{
-                    String contentType = response.headers().get("Content-type").stream().findFirst().orElseThrow();
-                    O parsedResult;
-                    log.debug("Content type is {}.", contentType);
-                    log.debug("Type class is {}.", type.getClass());
-                    log.debug("Type is {}.", type);
-                    if (contentType.startsWith("application/json")) {
-                        parsedResult = jsonParser.parseInputStream(response.body(), TypeVariable.class.isAssignableFrom(type.getClass()) ? Object.class : type);
-                    } else {
+
+        final int PREVIEW = 1024;
+        byte[] previewBuf = new byte[PREVIEW];
+        int previewLen = 0;
+        BufferedInputStream bodyStream = new BufferedInputStream(response.body());
+
+        // mark & read first PREVIEW bytes for potential error logging
+        bodyStream.mark(PREVIEW);
+        try {
+            previewLen = bodyStream.read(previewBuf);
+        } catch (IOException ignored) {
+        }
+        try {
+            bodyStream.reset();
+        } catch (IOException ignored) {
+        }
+
+        try {
+            O parsed = Optional.of(expectedResponseType)
+                    .filter(not(Void.TYPE::equals))
+                    .map(type -> {
+                        String contentType = response.headers()
+                                .get("Content-type")
+                                .stream()
+                                .findFirst()
+                                .orElse("application/json");
+
+                        if (contentType.startsWith("application/json")) {
+                            return jsonParser.parseInputStream(
+                                    bodyStream,
+                                    TypeVariable.class.isAssignableFrom(type.getClass())
+                                            ? Object.class
+                                            : type
+                            );
+                        }
+
                         if (checkType(type, String.class) && contentType.startsWith("text/")) {
                             try {
-                                parsedResult = (O)IOUtils.toString(response.body(), defaultCharset());
-                            } catch (IOException e) {
-                                throw new ParsingException("An error occurred while parsing the response.", e);
-                            }
-                        } else {
-                            if (checkType(type, InputStream.class)) {
-                                parsedResult = (O)response.body();
-                            } else {
-                                throw new UnsupportedContentTypeException(contentType, type);
+                                @SuppressWarnings("unchecked")
+                                O result = (O) new String(
+                                        bodyStream.readAllBytes(),
+                                        defaultCharset()
+                                );
+                                return result;
+                            } catch (IOException ioe) {
+                                throw new ParsingException("Could not read text response", ioe);
                             }
                         }
-                    }
-                    return parsedResult;
-                })
-                .orElse(null);
-        log.debug("Response parsed successfully.");
-        return result;
+
+                        if (checkType(type, InputStream.class)) {
+                            @SuppressWarnings("unchecked")
+                            O result = (O) bodyStream;
+                            return result;
+                        }
+
+                        throw new UnsupportedContentTypeException(contentType, type);
+                    })
+                    .orElse(null);
+
+            log.debug("Response parsed successfully.");
+            return parsed;
+
+        } catch (RuntimeException ex) {
+            String snippet = previewLen > 0
+                    ? new String(previewBuf, 0, previewLen, defaultCharset())
+                    : "<no data>";
+            log.error("Failed to parse response from {} {} (first {} bytes):\n{}",
+                    method, relativePath, previewLen, snippet);
+            throw ex;
+        }
     }
 
     private boolean checkType(Type type, Class<?> expectedClass) {
-        return (type.getClass().isAssignableFrom(Class.class) && Class.class.cast(type).isAssignableFrom(expectedClass)) || TypeVariable.class.isAssignableFrom(type.getClass());
+        return (type.getClass().isAssignableFrom(Class.class)
+                && ((Class<?>) type).isAssignableFrom(expectedClass))
+                || TypeVariable.class.isAssignableFrom(type.getClass());
     }
 
-    private Response callApi(HttpMethod method, String relativePath, Map<String, List<String>> headers, Map<String, List<String>> queryParams, InputStream body) {
+    private Response callApi(HttpMethod method,
+                             String relativePath,
+                             Map<String, List<String>> headers,
+                             Map<String, List<String>> queryParams,
+                             InputStream body) {
+
         Request request = client.prepareAuthenticatedRequest(host, port, method, relativePath)
                 .withHeaders(headers)
                 .withQueryParams(queryParams)
                 .withBody(body)
                 .build();
+
         log.debug("Executing authenticated {} request with target {}", method, request.getUrl());
         return client.send(request);
     }
